flasgger library integration ('ServicesApi' resource).
